--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,7 +2,9 @@ includes:
     - vendor/larastan/larastan/extension.neon
 
 parameters:
-
+    excludePaths:
+        - app/Http/Resources/
+   
     paths:
         - app/
 
@@ -12,7 +14,6 @@ parameters:
 #    ignoreErrors:
 #        - '#PHPDoc tag @var#'
 #
-#    excludePaths:
-#        - ./app/Http/Resources/
+#
 #
 #    checkMissingIterableValueType: false
