--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "yajra/laravel-datatables": "10.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.14",
         "fakerphp/faker": "^1.9.1",
         "larastan/larastan": "^2.8",
         "laravel/pint": "^1.0",
