--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     },
     "dependencies": {
         "datatables": "^1.10.18",
-        "jquery": "^3.7.1"
+        "jquery": "^3.7.1",
+        "jquery-viewer": "^1.0.1",
+        "viewerjs": "^1.11.6"
     }
 }
