--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,15 @@
         "framework"
     ],
     "license": "MIT",
+    "repositories": {
+        "eximyx/laravel-custom-seeder": {
+            "type": "path",
+            "url": "packages/eximyx/laravel-custom-seeder",
+            "options": {
+                "symlink": true
+            }
+        }
+    },
     "require": {
         "php": "^8.1",
         "cviebrock/eloquent-sluggable": "^10.0",
@@ -15,7 +24,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "yajra/laravel-datatables": "10.0",
-        "ext-dom": "*"
+        "ext-dom": "*",
+        "eximyx/laravel-custom-seeder" : "@dev"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.10",
